--- a/@telegram-xp-bot/bot/package.json
+++ b/@telegram-xp-bot/bot/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@telegram-xp-bot/database": "1.0.0",
+    "dotenv": "^8.2.0",
     "telegraf": "^3.32.0"
   },
   "keywords": [],
